<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ fragment_placemark_dialog.xml
  ~ Created by G.Capelli (BasicAirData) on 8/6/2016
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <EditText
                    android:id="@+id/film_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/film_data_hint"
                    android:inputType="textCapSentences"
                    android:nextFocusDown="@id/pdata_ev"
                    android:nextFocusForward="@id/pdata_ev"
                    android:nextFocusLeft="@id/pdata_ev">

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/dphoto_ev" />

                <EditText
                    android:id="@+id/pdata_ev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/dphoto_av_hint"
                    android:inputType="number"
                    android:nextFocusLeft="@id/pdata_fv"
                    android:nextFocusForward="@id/pdata_fv"
                    android:nextFocusDown="@id/pdata_fv">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/dphoto_fv" />

                <EditText
                    android:id="@+id/pdata_fv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/dphoto_fv_hint"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/pdata_tv"
                    android:nextFocusForward="@id/pdata_tv"
                    android:nextFocusLeft="@id/pdata_tv">

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/dphoto_tv" />

                <EditText
                    android:id="@+id/pdata_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/dphoto_tv_hint"
                    android:inputType="number|phone"
                    android:nextFocusDown="@id/pdata_av"
                    android:nextFocusForward="@id/pdata_av"
                    android:nextFocusLeft="@id/pdata_av">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/dphoto_av" />

                <EditText
                    android:id="@+id/pdata_av"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/dphoto_ev_hint"
                    android:inputType="number|numberDecimal"
                    android:nextFocusDown="@id/placemark_description"
                    android:nextFocusForward="@id/placemark_description"
                    android:nextFocusLeft="@id/placemark_description">

                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants">

                <requestFocus />

                <EditText
                    android:id="@+id/placemark_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/dlg_placemark_description"
                    android:inputType="textCapSentences"
                    android:nextFocusLeft="@id/pdata_ev"
                    android:nextFocusForward="@id/pdata_ev"
                    android:nextFocusDown="@id/pdata_ev">

                    <requestFocus />
                </EditText>
            </TableRow>

        </TableLayout>

    </LinearLayout>
</RelativeLayout>